# NativeAudioReCoder

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/cloudgame/nativeaudiorecoder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: logger.h  native_audio.cpp  opensles_recorder.cpp  opensles_recorder.h  record_buffer.h
app/src/main/java/com/cloudgame/nativeaudiorecoder/: AudioRecorder.java  MainActivity.java
app/src/main/java/com/cloudgame/nativeaudiorecoder/playtest/: AudioTrackPlayer.java  IAudioPlay.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/cloudgame/nativeaudiorecoder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
